archio/ingressController/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec: 
  tls:
  - hosts:
    - "cl.archio.com.br"    
    - "queues.archio.com.br"
    secretName: api-secret-prod
  rules: 
    - host: cl.archio.com.br
      http:
        paths:
        - path: /main/(.+)
          backend:
            serviceName: archio-main
            servicePort: 80
    - host: cl.archio.com.br
      http:
        paths:
        - path: /exportarchives/(.+)
          backend:
            serviceName: export-archio
            servicePort: 80
    - host: queues.archio.com.br
      http:
        paths:
        - path: /
          backend:
            serviceName: rabbitmq
            servicePort: 80
